--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-body { background-color: #F00; }
+@font-face{font-family:"";src:url()}body{background-color:#222;color:#fff}/*# sourceMappingURL=main.css.map */
